# ezelementals

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/ezelementals/: classify.py  compress.py  extract.py  ha_client.py  pipeline.py
src/ezelementals/ui/: config.py  server.py
src/ezelementals/ui/jobs/: encode_job.py
src/ezelementals/ui/routes/: devices.py  editor.py  encoder.py  library.py  player.py  settings.py
src/ezelementals/ui/static/: index.html
src/ezelementals/ui/static/assets/: DeviceConfig-Bovw62fq.js  DeviceRack-BeyBd8er.js  Editor-C14g01BH.js  Editor-DawfPCQy.js  EffectLanes-BFl_TFdF.js  Encoder-BlmeEJzt.js  Encoder-DefLBcHw.js  Library-CUhTTs8l.js  Library-nu66uGP8.js  Player-1RhRes7i.js  Player-DLqH5-Y5.js  ReviewQueue-BcysW9tm.js  ReviewQueue-Br2dqRzd.js  (+15 more)
src/ezelementals/ui/ws/: encoder_stream.py
tests/: conftest.py
tests/fixtures/: mock_responses.py
tests/integration/: test_classify.py  test_compress.py  test_extract.py  test_ha_client.py  test_pipeline.py  test_sample_video.py  test_ui_encode.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: EffectLanes.tsx  EffectTrail.tsx  FrameViewer.tsx  Wizard.tsx  WorkerCard.tsx
ui/src/components/devices/: DeviceRack.tsx  FanWidget.tsx  MisterWidget.tsx  RadiantHeaterWidget.tsx  SpaceHeaterWidget.tsx
ui/src/lib/: api.ts  colors.ts  websocket.ts
ui/src/pages/: DeviceConfig.tsx  Editor.tsx  Encoder.tsx  Library.tsx  Player.tsx  ReviewQueue.tsx  Settings.tsx
