[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezelementals"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "librosa>=0.10",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "Pillow>=10.0",
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
ezelementals-pipeline = "ezelementals.pipeline:run_pipeline_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ezelementals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]
